--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             {
                 name: "English4u",
                 url: "https://t.me/english_4_u_mytischi",
-                logo: "images/english4u.png"
+                logo: "images/English4u.png"
             },
             {
                 name: "Молочный Ёж",
@@ -157,4 +157,5 @@
         document.addEventListener('DOMContentLoaded', createChannelElements);
     </script>
 </body>
+
 </html>
