--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             {
                 name: "English4u",
                 url: "https://t.me/english_4_u_mytischi",
-                logo: "images/English4u.png"
+                logo: "images/english4u.png"
             },
             {
                 name: "Молочный Ёж",
@@ -159,4 +159,5 @@
 </body>
 
 </html>
+
 
